fixed bugs
- no space between items of the card in booking fixed
- footer gap between socials is finally in the middle
-fixed a heading not being in the middle
- section made wider on one query not to look weird and standing out

--- a/08-Booking/booking.css
+++ b/08-Booking/booking.css
@@ -96,13 +96,13 @@
     max-width: 80%;
 }
 .booking-card a{
-    margin-top:auto;
     background-color: var(--brown);
     color: var(--white);
     padding: 1.25rem 2.5rem;
     border: none;
     cursor: pointer;
     transition: 0.3s;
+    text-align: center;
 }
 .booking-card a:hover {
     background-color: var(--beige);
@@ -138,11 +138,7 @@
     .booking-card:nth-child(4) {
         margin-bottom: 10rem;
     }
-    .booking-card a  {
-        flex-grow: 1;
-        
-        
-    }
+   
 }
 
 @media screen and (max-width: 615px) {
